--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -15,7 +15,7 @@
         list-style: none;
         font-weight: normal;
         font-style: normal;
-        /* font-family: "Times New Roman", Times, serif; */
+        font-family: "Arial", "Helvetica", "Verdana", sans-serif; */
     }
 
     .box {
@@ -115,7 +115,7 @@
         width: 780px;
         /* font-size: 20px; */ /* control font size */
         margin-bottom: 20px;
-        /* font-family: "Times New Roman", Times, serif; */
+        font-family: "Arial", "Helvetica", "Verdana", sans-serif; 
     }
 
     p:hover {
@@ -128,9 +128,10 @@
 <div class="box">
   <div class="edit">
     <p>Let’s now take an example of the BMW Group, one of the most famous automobile companies
-    in Germany. How would you categorize the following cost examples if the cost object is all cars of the BMW 4 Series Coupé 
+    in Germany. How would you categorize the following cost examples if the cost object are the cars of the BMW 4 Serie Coupé 
     which are produced at BMW Group plant Dingolfing? BMW also produces many other car models 
-    such as the BMW 6 series gran turismo at the same plant in Dingolfing.</p>
+    such as the BMW 6 series gran turismo at the same plant in Dingolfing. Note: You can enlarge the window by clicking at the button with the two arrows 
+    below the left right corner. </p>
   </div>
   <table border="1" class="table" cellspacing="0" cellpadding="0">
     <tr>
@@ -175,10 +176,6 @@
     <p class="drag" draggable="true" data-index="3">
       Depreciation of the machinery and manufacturing equipment which is only
       used for producing the BMW 4 Series Coupé.
-    </p>
-    <p class="drag" draggable="true" data-index="2">
-      Maintenance costs for the BMW Group Plant Dingolfing which produces BMW
-      4 Series Coupé and many other car models.
     </p>
     <p class="drag" draggable="true" data-index="4">
       Salary of the plant manager of BMW Group Plant Dingolfing who oversees
