--- a/module_4_P&S Costing/flowChart.html
+++ b/module_4_P&S Costing/flowChart.html
@@ -175,9 +175,9 @@
     <div>
         <div class="title">
             <p> Module 4 Product and Service Costing</p>
-            <p>Summary Exercise: Fill in the blanks of the decision tree.</p>
-            <p>By filling the blanks, you can get an overview of the different methods and their categorization within product and service costing.
-                Attention: when you drag an element into one box in the decision tree, green color indicates the correctness and red color indicates the incorrectness.
+            <p>Summary Exercise: Fill in the blank spaces of the summary tree.</p>
+            <p>By filling in the blank spaces of the summary tree, you get an overview of the different methods and their categorization within product and service costing.
+                Please note: when you drag an element into one blank space of the summary tree, green color indicates a correct selection while red color indicates a mistake.
             </p>
         </div>
 
