--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -13,7 +13,7 @@
     <div class="top">
       <div class="left">
         <h2>Task: Sort the components of the income statement according to the "cost-of-sales method"</h2>
-        <div class="hint">Hint: Drag and drop the components into the table. You can change the view mode to a larger view by clicking the arrows at the bottom left.</div>
+        <div class="hint">Hint: Drag and drop the components into the table.<br>You can change the view mode to a larger view by clicking the arrows at the bottom left.</div>
       </div>
 
     </div>
