--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -128,9 +128,9 @@
 <div class="box">
   <div class="edit">
     <p>Let’s now take an example of the BMW Group, one of the most famous automobile companies
-    in Germany. How would you categorize the following cost examples if the cost object are the cars of the BMW 4 Serie Coupé 
-    which are produced at BMW Group plant Dingolfing? BMW also produces many other car models 
-    such as the BMW 6 series gran turismo at the same plant in Dingolfing. Note: You can enlarge the window by clicking at the button with the two arrows 
+    in Germany. How would you categorize the following cost examples if the cost object are the cars of the BMW 4 Coupé 
+    which are produced at BMW Group plant Dingolfing? BMW also produces many other car series 
+    such as the BMW 6 GT at the same plant in Dingolfing. Note: You can enlarge the window by clicking at the button with the two arrows 
     below the left right corner. </p>
   </div>
   <table border="1" class="table" cellspacing="0" cellpadding="0">
@@ -153,36 +153,36 @@
 
   <div class="cardBox">
     <p class="drag" draggable="true" data-index="1">
-      Costs of steel for the BMW 4 Series Coupé.
+      Costs of steel for the BMW 4 Coupé.
     </p>
     <p class="drag" draggable="true" data-index="1">
       Salary of temporary workers which are only involved in the assembly of
-      BMW 4 Series Coupé.
+      BMW 4 Coupé.
     </p>
     <p class="drag" draggable="true" data-index="2">
       Power costs at the BMW Group Plant Dingolfing which produces BMW 4
-      Series Coupé and many other car models.
+      Coupé and many other car series.
     </p>
     <p class="drag" draggable="true" data-index="4">
       Annual license fees for a software used to simulate car crashes.
     </p>
     <p class="drag" draggable="true" data-index="3">
-      Salary of supervisor responsible for the assembly of BMW 4 Series
+      Salary of supervisor responsible for the assembly of BMW 4
       Coupé only.
     </p>
     <p class="drag" draggable="true" data-index="1">
-      Costs of the steering wheels for the BMW 4 Series Coupé.
+      Costs of the steering wheels for the BMW 4 Coupé.
     </p>
     <p class="drag" draggable="true" data-index="3">
       Depreciation of the machinery and manufacturing equipment which is only
-      used for producing the BMW 4 Series Coupé.
+      used for producing the BMW 4 Coupé.
     </p>
     <p class="drag" draggable="true" data-index="4">
       Salary of the plant manager of BMW Group Plant Dingolfing who oversees
-      the production of BMW 4 Series Coupé and many other car models.
+      the production of BMW 4 Coupé and many other car series.
     </p>
     <p class="drag" draggable="true" data-index="1">
-      Cost of paint for the BMW 4 Series Coupé.
+      Cost of paint for the BMW 4 Coupé.
     </p>
   </div>
 </div>
