--- a/program_type/index.html
+++ b/program_type/index.html
@@ -12,8 +12,8 @@
   <div class="box">
     <div class="top">
       <div class="left">
-        <h2>"…………………………………………………………"(exercise title)</h2>
-        <div class="hint">"…………………………………………………………"(instruction words)</div>
+        <h2>"Task: Allocate the examples to the respective program type via drag-and-drop."(exercise title)</h2>
+        <div class="hint">"You can change the view mode to a larger view by clicking the arrows at the bottom left."(instruction words)</div>
       </div>
 
     </div>
@@ -78,7 +78,7 @@
             <td class="container containers2" data-index="2"></td>
           </tr>
           <tr>
-            <td class="symbol">Variety production</td>
+            <td class="symbol">Variant/variety production</td>
             <td class="container containers3" data-index="3"></td>
           </tr>
           <tr>
