--- a/program_type/index.html
+++ b/program_type/index.html
@@ -12,8 +12,8 @@
   <div class="box">
     <div class="top">
       <div class="left">
-        <h2>"Task: Allocate the examples to the respective program type via drag-and-drop."</h2>
-        <div class="hint">"You can change the view mode to a larger view by clicking the arrows at the bottom left."</div>
+        <h2>Task: Allocate the examples to the respective program type via drag-and-drop.</h2>
+        <div class="hint">You can change the view mode to a larger view by clicking the arrows at the bottom left.</div>
       </div>
 
     </div>
