--- a/program_type/index.html
+++ b/program_type/index.html
@@ -12,8 +12,8 @@
   <div class="box">
     <div class="top">
       <div class="left">
-        <h2>Task: Allocate the product examples to the respective program types via drag-and-drop function.</h2>
-        <div class="hint">You can change the view mode to a larger view by clicking the arrows at the bottom left.</div>
+        <h2>Task: Allocate the product examples to the respective program types via drag-and-drop.</h2>
+        <div class="hint">Hint: You can change the view mode to a larger view by clicking the arrows at the bottom left.</div>
       </div>
 
     </div>
