--- a/job_costing/index.html
+++ b/job_costing/index.html
@@ -12,7 +12,7 @@
   <div class="box">
     <div class="top">
       <div class="left">
-        <h2>"Task: Assign the allocation bases to the respective cost centers via drag-and-drop."(exercise title)</h2>
+        <h2>Task: Assign the allocation bases to the respective cost centers via drag-and-drop.</h2>
         <div class="hint">Hint: You can change the view mode to a larger view by clicking on the arrows at the bottom left.</div>
       </div>
 
