--- a/module_4_P&S Costing/flowChart.html
+++ b/module_4_P&S Costing/flowChart.html
@@ -174,11 +174,9 @@
 <body>
     <div>
         <div class="title">
-            <p> Module 4 Product and Service Costing</p>
-            <p>Summary Exercise: Fill in the blank spaces of the summary tree.</p>
-            <p>By filling in the blank spaces of the summary tree, you get an overview of the different methods and their categorization within product and service costing.
-                Please note: when you drag an element into one blank space of the summary tree, green color indicates a correct selection while red color indicates a mistake.
-            </p>
+            <h2>Task: Fill in the blank spaces of the summary tree to get an overview of the different methods and their categorization within product and service costing. </h2>
+            <div class="hint">Hint: You can change the view mode to a larger view by clicking on the arrows at the bottom left.</div>
+                       </p>
         </div>
 
     </div>
