--- a/cost_behavior_patterns/index.html
+++ b/cost_behavior_patterns/index.html
@@ -13,7 +13,7 @@
     <div class="top">
       <div class="left">
         <h2>Task: Match the descriptions of the manufacturing cost data to the displayed graphs via drag-and-drop. The vertical axes of the graphs below represent total costs and the horizontal axes display units produced during a calendar year.</h2>
-        <div class="hint">Hint: You can change the view mode to a larger view by clicking on the arrows at the bottom left. Source: Horngren, Charles T.; Datar, Srikant M.; Rajan, Madhav: Cost accounting: a managerial emphasis, 14th edition 2012.</div>
+        <div class="hint">Hint: You can change the view mode to a larger view by clicking on the arrows at the bottom left.</div>
       <div class="hint">Source: Horngren, Charles T.; Datar, Srikant M.; Rajan, Madhav: Cost accounting: a managerial emphasis, 14th edition 2012.</div>
       </div>
 
