--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -128,10 +128,10 @@
 <div class="box">
   <div class="edit">
     <p>Let’s now take an example of the BMW Group, one of the most famous automobile companies
-    in Germany. How would you categorize the following cost examples if the cost object are the cars of the BMW 4 Coupé 
+    in Germany. How would you categorize the following cost examples if the cost objects are the cars of the BMW 4 Coupé 
     which are produced at BMW Group plant Dingolfing? BMW also produces many other car series 
     such as the BMW 6 GT at the same plant in Dingolfing. Note: You can enlarge the window by clicking at the button with the two arrows 
-    below the left right corner. </p>
+    below. </p>
   </div>
   <table border="1" class="table" cellspacing="0" cellpadding="0">
     <tr>
