--- a/program_type/index.html
+++ b/program_type/index.html
@@ -29,7 +29,7 @@
 
           <li>
             <span class="drag" data-index="1" draggable="true">Bridges</span>
-            <span class="drag" data-index="2" draggable="true">Backed goods</span>
+            <span class="drag" data-index="2" draggable="true">Baked goods</span>
             <span class="drag" data-index="3" draggable="true">Screws</span>
           </li>
 
