--- a/program_type/index.html
+++ b/program_type/index.html
@@ -13,7 +13,7 @@
     <div class="top">
       <div class="left">
         <h2>Task: Allocate the product examples to the respective program types via drag-and-drop.</h2>
-        <div class="hint">Hint: You can change the view mode to a larger view by clicking on the arrows at the bottom left.</div>
+        <div class="hint">Hint: You can enlarge the view mode by clicking on the arrows at the bottom left.</div>
       </div>
 
     </div>
