--- a/job_costing/index.html
+++ b/job_costing/index.html
@@ -12,8 +12,8 @@
   <div class="box">
     <div class="top">
       <div class="left">
-        <h2>Task: Assign the allocation base examples to the respective cost centers via drag-and-drop.</h2>
-        <div class="hint">Hint: You can change the view mode to a larger view by clicking on the arrows at the bottom left.</div>
+        <h2>Task: Use drag-and-drop to assign the examples of cost-allocation bases to a cost center that might usually use the respective allocation base to allocate its overhead costs.</h2>
+        <div class="hint">Hint: You can enlarge the view by clicking on the arrows at the bottom left.</div>
       </div>
 
     </div>
