--- a/module_4_P&S Costing/flowChart.html
+++ b/module_4_P&S Costing/flowChart.html
@@ -175,7 +175,7 @@
     <div>
         <div class="title">
             <h2>Task: Fill in the blank spaces of the summary tree to get an overview of the different methods and their categorization within product and service costing. </h2>
-            <div class="hint">Hint: You can change the view mode to a larger view by clicking on the arrows at the bottom left.</div>
+            <div class="hint">Hint: You can enlarge the view mode by clicking on the arrows at the bottom left.</div>
                        </p>
         </div>
 
