--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -175,7 +175,7 @@
     </p>
     <p class="drag" draggable="true" data-index="3">
       Depreciation of the machinery and manufacturing equipment which is only
-      used for producing the BMW 4 Coupé.
+      used for producing the BMW 4 Coupé. Assume that the company uses a depreciation method that is independent of the usage of the machinery e.g. straight-line depreciation.
     </p>
     <p class="drag" draggable="true" data-index="4">
       Salary of the plant manager of BMW Group Plant Dingolfing who oversees
