--- a/cost_behavior_patterns/index.html
+++ b/cost_behavior_patterns/index.html
@@ -79,30 +79,30 @@
             <td class="symbol">Manufacturing cost description</td>
           </tr>
           <tr>
-            <td class="symbol"><img src="A.png"></td>
+            <td class="symbol"><img src="1.png"></td>
             <td class="container  containers1" data-index="1"></td>  
           </tr>
           <tr>
-            <td class="symbol"><img src="B.png"></td>
+            <td class="symbol"><img src="2.png"></td>
             <td class="container containers2" data-index="2"></td>
           </tr>
           <tr>
-            <td class="symbol"><img src="C.png"></td>
+            <td class="symbol"><img src="3.png"></td>
             <td class="container containers3" data-index="3"></td>
 
           </tr>
           <tr>
-            <td class="symbol"><img src="D.png"></td>
+            <td class="symbol"><img src="4.png"></td>
             <td class="container containers4" data-index="4"></td>
 
           </tr>
           <tr>
-            <td class="symbol"><img src="E.png"></td>
+            <td class="symbol"><img src="5.png"></td>
             <td class="container containers5" data-index="5"></td>
             
           </tr>
           <tr>
-            <td class="symbol"><img src="F.png"></td>
+            <td class="symbol"><img src="6.png"></td>
             <td class="container containers6" data-index="6"></td>
           </tr>
        
