--- a/cost_behavior_patterns_v2/index.html
+++ b/cost_behavior_patterns_v2/index.html
@@ -81,22 +81,22 @@
             <td class="container containers2" data-index="2"></td>
           </tr>
           <tr>
-            <td class="symbol"><img src="3.png"></td>
+            <td class="symbol"><img src="C.png"></td>
             <td class="container containers3" data-index="3"></td>
 
           </tr>
           <tr>
-            <td class="symbol"><img src="4.png"></td>
+            <td class="symbol"><img src="3.png"></td>
             <td class="container containers4" data-index="4"></td>
 
           </tr>
           <tr>
-            <td class="symbol"><img src="5.png"></td>
+            <td class="symbol"><img src="4.png"></td>
             <td class="container containers5" data-index="5"></td>
             
           </tr>
           <tr>
-            <td class="symbol"><img src="6.png"></td>
+            <td class="symbol"><img src="5.png"></td>
             <td class="container containers6" data-index="6"></td>
           </tr>
        
