--- a/cost_behavior_patterns_v2/index.html
+++ b/cost_behavior_patterns_v2/index.html
@@ -81,7 +81,7 @@
             <td class="container containers2" data-index="2"></td>
           </tr>
           <tr>
-            <td class="symbol"><img src="C.png"></td>
+            <td class="symbol"><img src="6.png"></td>
             <td class="container containers3" data-index="3"></td>
 
           </tr>
