--- a/cost_behavior_patterns_v2/index.html
+++ b/cost_behavior_patterns_v2/index.html
@@ -15,7 +15,7 @@
         <h4>Task: Match the descriptions of the manufacturing cost data to the displayed graphs via drag-and-drop. 
           The vertical axes of the graphs represent total costs and the horizontal axes display units produced during a calendar year.</h4>
         <h6>Hint: You can enlarge the view by clicking on the arrows at the bottom left.
-          <br>Source: Horngren, Charles T.; Datar, Srikant M.; Rajan, Madhav: Cost accounting: a managerial emphasis, 14th edition 2012.</h6>
+          <br>Based on: Horngren, Charles T.; Datar, Srikant M.; Rajan, Madhav: Cost accounting: a managerial emphasis, 14th edition 2012.</h6>
       </div>
 
     </div>
