--- a/cost_behavior_patterns_v2/index.html
+++ b/cost_behavior_patterns_v2/index.html
@@ -34,11 +34,11 @@
 
           <li>
             <span class="drag" data-index="2" draggable="true">
-               Electricity bill, whis is computed as follows:
-              <br>· First 1,000 kWh or less --> Flat fee of $200
-              <br>· Next 1,000 kWh --> $0.20 per KWh used
-              <br>· Next 1,000 kWh --> $0.40 per KWh used
-              <br>· Next 1,000 kWh --> $0.60 per KWh used and so on
+               Electricity bill, which is computed as follows:
+              <br>· First 1,000 kWh or less: Flat fee of $200
+              <br>· Next 1,000 kWh: $0.20 per KWh used
+              <br>· Next 1,000 kWh: $0.40 per KWh used
+              <br>· Next 1,000 kWh: $0.60 per KWh used
               </span>
           </li>
 
@@ -54,7 +54,7 @@
               two persons are needed for 501 to 1,000 hours, and so on.</span>
             <span class="drag" data-index="6" draggable="true">
               Leasing fee for a production plant provided by the city, for which the contract calls for a fixed fee of $250,000 
-              that is reduced by €10 for each manufacturing labor hour worked more than 200,000 hours.
+              that is reduced by $10 for each manufacturing labor hour worked more than 200,000 hours.
               In any case, the firm must pay a rental fee of $50,000.</span>
           </li>  
           
