--- a/cost_behavior_patterns_v2/index.html
+++ b/cost_behavior_patterns_v2/index.html
@@ -44,8 +44,8 @@
 
           <li>
             <span class="drag" data-index="3" draggable="true">
-             Direct material costs. Director material cost per produced unit decreases with each kg of material that is used. 
-             If 100 kgs are used, the cost is $500, if 200 kgs are used, the cost is $975, etc., with a minimum cost per kg of $400.</span>
+             Direct material costs per unit are constant at $5 if the company buys less than 200 kilograms. 
+             For each kg the company purchases above 200 kg, it receives a discount on the price per kg such that each additional kg of material costs $4.</span>
           </li>
           
            <li>
