--- a/cost_behavior_patterns_v2/index.html
+++ b/cost_behavior_patterns_v2/index.html
@@ -44,7 +44,7 @@
 
           <li>
             <span class="drag" data-index="3" draggable="true">
-             Direct material costs per unit are constant at $5 if the company buys less than 200 kilograms. 
+             Direct material costs. Direct material costs per unit are constant at $5 if the company buys less than 200 kilograms. 
              For each kg the company purchases above 200 kg, it receives a discount on the price per kg such that each additional kg of material costs $4.</span>
           </li>
           
