--- a/module_4_P&S Costing/flowChart.html
+++ b/module_4_P&S Costing/flowChart.html
@@ -169,7 +169,7 @@
         }
 
     </style>
-    <script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 </head>
 <body>
     <div>
